# vectorClass

./: CMakeLists.txt  MyMathConfig.cmake.in  README.md
include/: Vector.h
src/: MyMath.cpp
tests/: VectorConstructorTest.cpp  VectorFunctionTest.cpp  VectorOperatorTest.cpp
